Fix unread overlaping metions

--- a/betterdiscord/main.css
+++ b/betterdiscord/main.css
@@ -404,8 +404,8 @@
 }
 :root .listItem-GuPuDH.bd-unread .pill-1z4sAY, :root .listItem-GuPuDH[vz-unread] .pill-1z4sAY, :root .listItem-GuPuDH.unread .pill-1z4sAY,
 :root .wrapper-3Njo_c.bd-unread:not(.expanded) .pill-1z4sAY, :root .wrapper-3Njo_c[vz-unread]:not(.expanded) .pill-1z4sAY, :root .wrapper-3Njo_c.unread:not(.expanded) .pill-1z4sAY,
-:root .listItem-GuPuDH.unread.mentioned .wrapper-25eVIn::before, :root .listItem-GuPuDH[vz-unread][vz-mentioned] .wrapper-25eVIn::before, :root .listItem-GuPuDH.bd-unread[bd-mentioned] .wrapper-25eVIn::before,
-:root .wrapper-3Njo_c.unread.mentioned .wrapper-25eVIn::before, :root .wrapper-3Njo_c[vz-unread][vz-mentioned] .wrapper-25eVIn::before, :root .wrapper-3Njo_c.bd-unread[bd-mentioned] .wrapper-25eVIn::before {
+:root .listItem-GuPuDH.unread.mentioned .wrapper-25eVIn::before, :root .listItem-GuPuDH[vz-unread][vz-mentioned] .wrapper-25eVIn::before, :root .listItem-GuPuDH.bd-unread.bd-badge .wrapper-25eVIn::before,
+:root .wrapper-3Njo_c.unread.mentioned .wrapper-25eVIn::before, :root .wrapper-3Njo_c[vz-unread][vz-mentioned] .wrapper-25eVIn::before, :root .wrapper-3Njo_c.bd-unread.bd-badge .wrapper-25eVIn::before {
   display: none;
 }
 :root .listItem-GuPuDH.bd-unread[bd-selected] .pill-1z4sAY, :root .listItem-GuPuDH.unread.selected .pill-1z4sAY,
