--- a/stuff/_server-list.scss
+++ b/stuff/_server-list.scss
@@ -143,8 +143,8 @@
 }
 .listItem-GuPuDH.bd-unread .pill-1z4sAY, .listItem-GuPuDH[vz-unread] .pill-1z4sAY, .listItem-GuPuDH.unread .pill-1z4sAY,
 .wrapper-3Njo_c.bd-unread:not(.expanded) .pill-1z4sAY, .wrapper-3Njo_c[vz-unread]:not(.expanded) .pill-1z4sAY, .wrapper-3Njo_c.unread:not(.expanded) .pill-1z4sAY,
-.listItem-GuPuDH.unread.mentioned .wrapper-25eVIn::before, .listItem-GuPuDH[vz-unread][vz-mentioned] .wrapper-25eVIn::before, .listItem-GuPuDH.bd-unread[bd-mentioned] .wrapper-25eVIn::before,
-.wrapper-3Njo_c.unread.mentioned .wrapper-25eVIn::before, .wrapper-3Njo_c[vz-unread][vz-mentioned] .wrapper-25eVIn::before, .wrapper-3Njo_c.bd-unread[bd-mentioned] .wrapper-25eVIn::before {
+.listItem-GuPuDH.unread.mentioned .wrapper-25eVIn::before, .listItem-GuPuDH[vz-unread][vz-mentioned] .wrapper-25eVIn::before, .listItem-GuPuDH.bd-unread.bd-badge .wrapper-25eVIn::before,
+.wrapper-3Njo_c.unread.mentioned .wrapper-25eVIn::before, .wrapper-3Njo_c[vz-unread][vz-mentioned] .wrapper-25eVIn::before, .wrapper-3Njo_c.bd-unread.bd-badge .wrapper-25eVIn::before {
   display: none;
 }
 
